@@ -641,7 +641,7 @@ sub new {
       if exists $arg{session_ticket};
 
    $self->{debug} = $ENV{PERL_ANYEVENT_TLS_DEBUG}
-      if exists $ENV{PERL_ANYEVENT_TLS_DEBUG};
+      if length $ENV{PERL_ANYEVENT_TLS_DEBUG};
 
    $self->{debug} = $arg{debug}
       if exists $arg{debug};
@@ -659,7 +659,7 @@ sub new {
          if (exists $arg{ca_file} or exists $arg{ca_path}) {
             Net::SSLeay::CTX_load_verify_locations ($ctx, $arg{ca_file}, $arg{ca_path});
          }
-      } elsif (exists $ENV{PERL_ANYEVENT_CA_FILE} or exists $ENV{PERL_ANYEVENT_CA_PATH}) {
+      } elsif (length $ENV{PERL_ANYEVENT_CA_FILE} or length $ENV{PERL_ANYEVENT_CA_PATH}) {
          Net::SSLeay::CTX_load_verify_locations (
             $ctx,
             $ENV{PERL_ANYEVENT_CA_FILE},
